@@ -2,8 +2,8 @@ package mill.javalib
 
 import java.io.ByteArrayOutputStream
 import java.io.PrintStream
-import mill.api.Discover
 import mill.*
+import mill.api.Discover
 import mill.testkit.TestRootModule
 import mill.testkit.UnitTester
 import mill.util.TokenReaders.*
@@ -12,10 +12,6 @@ import utest.*
 object JavaCompileErrorFormattingTests extends TestSuite {
 
   object JavaCompileErrorFormatting extends TestRootModule {
-    object core extends JavaModule
-    lazy val millDiscover = Discover[this.type]
-  }
-  object JavaCompileErrorFormattingUnchecked extends TestRootModule {
     object core extends JavaModule {
       def javacOptions = Seq("-Xlint:unchecked", "-Werror")
     }
@@ -24,146 +20,139 @@ object JavaCompileErrorFormattingTests extends TestSuite {
 
   val resourcePath = os.Path(sys.env("MILL_TEST_RESOURCE_DIR")) / "compile-error-formatting-java"
 
-  private def containsConsecutiveLines(err: String, expected: Seq[String]): Boolean = {
-    val lines = err.linesIterator.toVector
-    lines.indices.exists { start =>
-      expected.indices.forall { i =>
-        start + i < lines.length && lines(start + i).contains(expected(i))
-      }
-    }
-  }
-
-  private def assertConsecutiveLines(err: String, expected: Seq[String]): Unit = {
-    if (!containsConsecutiveLines(err, expected)) {
-      sys.error(
-        s"Expected consecutive lines not found:\n${expected.mkString("\n")}\n\nIn output:\n$err"
-      )
-    }
-  }
-
-  private def assertContainsAll(err: String, expected: Seq[String]): Unit = {
-    val missing = expected.filterNot(err.contains)
-    if (missing.nonEmpty) {
-      sys.error(
-        s"Expected lines not found:\n${missing.mkString("\n")}\n\nIn output:\n$err"
-      )
-    }
-  }
-
-  private def check(caseName: String, expected: Seq[String], requireFailure: Boolean = true): Unit = {
+  private def checkLines(caseName: String): Seq[String] = {
     val errBuffer = new ByteArrayOutputStream()
     UnitTester(
       JavaCompileErrorFormatting,
       sourceRoot = resourcePath / caseName,
-      outStream = new PrintStream(new ByteArrayOutputStream()),
+      outStream = new PrintStream(errBuffer, true),
       errStream = new PrintStream(errBuffer, true)
     ).scoped { eval =>
       val res = eval.apply(JavaCompileErrorFormatting.core.compile).runtimeChecked
-      if (requireFailure) assert(res.isLeft)
-      val err = fansi.Str(errBuffer.toString).plainText
-      assertConsecutiveLines(err, expected)
+      assert(res.isLeft)
+      fansi.Str(errBuffer.toString).plainText.linesIterator.toSeq
     }
   }
 
   val tests: Tests = Tests {
     test("javaTypeUnchecked") {
-      val errBuffer = new ByteArrayOutputStream()
-      UnitTester(
-        JavaCompileErrorFormattingUnchecked,
-        sourceRoot = resourcePath / "java-type-unchecked",
-        outStream = new PrintStream(new ByteArrayOutputStream()),
-        errStream = new PrintStream(errBuffer, true)
-      ).scoped { eval =>
-        val res = eval.apply(JavaCompileErrorFormattingUnchecked.core.compile).runtimeChecked
-        assert(res.isLeft)
-        val err = fansi.Str(errBuffer.toString).plainText
-        assertConsecutiveLines(
-          err,
-          Seq(
-            "[warn] core/src/Foo.java:6:22",
-            "        return (T[]) obj;",
-            "                     ^^^",
-            "unchecked cast"
-          )
+      assertGoldenLiteral(
+        checkLines("java-type-unchecked"),
+        List(
+          "compiling 1 Java source to out/core/compile.dest/classes ...",
+          "[warn] core/src/Foo.java:6:22",
+          "        return (T[]) obj;",
+          "                     ^^^",
+          "unchecked cast",
+          "  required: T[]",
+          "  found:    java.lang.Object",
+          "",
+          "[error] core/src/Foo.java",
+          "",
+          "",
+          "warnings found and -Werror specified",
+          "",
+          "[error] core.compile task failed"
         )
-        assertContainsAll(
-          err,
-          Seq(
-            "warnings found and -Werror specified",
-            "[error] core.compile task failed"
-          )
-        )
-      }
+      )
     }
 
     test("javaTypeMismatch") {
-      check(
-        "java-type-mismatch",
-        Seq(
+      assertGoldenLiteral(
+        checkLines("java-type-mismatch"),
+        List(
+          "compiling 1 Java source to out/core/compile.dest/classes ...",
           "[error] core/src/Foo.java:5:17",
           "        int x = \"hello\";",
           "                ^^^^^^^",
-          "incompatible types: java.lang.String cannot be converted to int"
+          "incompatible types: java.lang.String cannot be converted to int",
+          "",
+          "[error] core.compile task failed"
         )
       )
     }
 
     test("javaTypeMethod") {
-      check(
-        "java-type-method",
-        Seq(
+      assertGoldenLiteral(
+        checkLines("java-type-method"),
+        List(
+          "compiling 1 Java source to out/core/compile.dest/classes ...",
           "[error] core/src/Foo.java:6:10",
           "        s.nonExistentMethod();",
           "         ^^^^^^^^^^^^^^^^^^",
-          "cannot find symbol"
+          "cannot find symbol",
+          "  symbol:   method nonExistentMethod()",
+          "  location: variable s of type java.lang.String",
+          "",
+          "[error] core.compile task failed"
         )
       )
     }
 
     test("javaTypeVariable") {
-      check(
-        "java-type-variable",
-        Seq(
+      assertGoldenLiteral(
+        checkLines("java-type-variable"),
+        List(
+          "compiling 1 Java source to out/core/compile.dest/classes ...",
           "[error] core/src/Foo.java:5:17",
           "        int x = undefinedVariable + 1;",
           "                ^^^^^^^^^^^^^^^^^",
-          "cannot find symbol"
+          "cannot find symbol",
+          "  symbol:   variable undefinedVariable",
+          "  location: class javaTypeVariable.Foo",
+          "",
+          "[error] core.compile task failed"
         )
       )
     }
 
     test("javaParseSemicolon") {
-      check(
-        "java-parse-semicolon",
-        Seq(
+      assertGoldenLiteral(
+        checkLines("java-parse-semicolon"),
+        List(
+          "compiling 1 Java source to out/core/compile.dest/classes ...",
           "[error] core/src/Foo.java:5:18",
           "        int x = 1",
           "                 ^",
-          "';' expected"
+          "';' expected",
+          "",
+          "[error] core.compile task failed"
         )
       )
     }
 
     test("javaParseString") {
-      check(
-        "java-parse-string",
-        Seq(
+      assertGoldenLiteral(
+        checkLines("java-parse-string"),
+        List(
+          "compiling 1 Java source to out/core/compile.dest/classes ...",
           "[error] core/src/Foo.java:5:20",
           "        String s = \"hello world",
           "                   ^",
-          "unclosed string literal"
+          "unclosed string literal",
+          "",
+          "[error] core.compile task failed"
         )
       )
     }
 
     test("javaParseToplevel") {
-      check(
-        "java-parse-toplevel",
-        Seq(
+      assertGoldenLiteral(
+        checkLines("java-parse-toplevel"),
+        List(
+          "compiling 1 Java source to out/core/compile.dest/classes ...",
           "[error] core/src/Foo.java:3:1",
           "int x = 1;",
           "^",
-          "unnamed classes are a preview feature and are disabled by default."
+          "unnamed classes are a preview feature and are disabled by default.",
+          "  (use --enable-preview to enable unnamed classes)",
+          "",
+          "[error] core/src/Foo.java:1:1",
+          "package javaParseToplevel;",
+          "^",
+          "unnamed class should not have package declaration",
+          "",
+          "[error] core.compile task failed"
         )
       )
     }
